# CFAPyX

./: .buildinfo  .gitignore  LICENSE  README.md  Untitled.ipynb  backend.html  backendentrypoint.html  creator.html  creator_use.html  datastore.html  fragmentarray.html  fragments.html  genindex.html  groups.html  index.html  inspiration.html  objects.inv  options.html  overview.html  partition.html  py-modindex.html  pyproject.toml  requirements.txt  requirements_dev.txt  search.html  searchindex.js  utils.html  wrapper.html
.github/workflows/: ci.yml  sphinx.yml
CFAPyX/: __init__.py  active.py  backend.py  backendentrypoint.py  chunkwrapper.py  creator.py  datastore.py  decoder.py  fragmentarray.py  group.py  partition.py  subactive.py  utils.py  wrappers.py
_modules/: index.html
_modules/CFAPyX/: backend.html  datastore.html  group.html  partition.html  wrappers.html
_modules/cfapyx/: backend.html  creator.html  datastore.html  group.html  wrappers.html
_sources/: creator.rst.txt  fragmentarray.rst.txt  fragments.rst.txt  groups.rst.txt  index.rst.txt  inspiration.rst.txt  options.rst.txt  overview.rst.txt  utils.rst.txt
_static/: documentation_options.js
cf_notes/: README.md
cf_notes/.ipynb_checkpoints/: testLocal-checkpoint.ipynb
cfapyx/: __init__.py  backend.py  creator.py  datastore.py  decoder.py  group.py  utils.py  wrappers.py
cfapyx/tests/: conftest.py  issue16.py  test_basic.py  test_read.py  test_write.py
docs/: requirements.txt
docs/source/: backend.rst  backendentrypoint.rst  chunkwrapper.rst  conf.py  creator.rst  creator_use.rst  datastore.rst  fragmentarray.rst  fragments.rst  groups.rst  index.rst  inspiration.rst  new_conventions.txt  old_conventions.txt  options.rst  overview.rst  partition.rst  wrapper.rst
fetch_func/: fetch_functions.py  usefuls.py
issues/: issue16.py  issue16_example.nc
notes/: README.md
testing/: CMIPCFA.ipynb  createExampleData.py  example2.py  testCfCFARead.py  testDomain.py  testKerchunk.py  testPlainAgg.py  testXAgg.py
tests/: Untitled.ipynb  createExampleData.py  kerchunkLazy.py  testChunkShapes.py  testDomain.ipynb  testKerchunk.py  testLocal.ipynb  testPerformance.ipynb  testPlainAgg.py  testRainCube.ipynb  testXAgg.py  test_cfa.py  trackCf.py
tests/.ipynb_checkpoints/: CMIPCFA-checkpoint.ipynb  Untitled-checkpoint.ipynb  testDomain-checkpoint.ipynb  testPerformance-checkpoint.ipynb
tests/rain/: example1.nc  example2.nc  example3.nc  example4.nc  example6.nc  (+3 more)
xarray_notes/: README.md
xarray_repos/: README.md  fsspec_test.py  openCFAwithX.py  xarray_CFA.py
(+9 files in other folders)
