[project]
name = "cfapyx"
version = "2025.3.18"
description = "The pure-Python implementation of the CF Aggregation conventions, including the Xarray engine to enable reading CFA-netCDF files."
authors = [
    {name = "Daniel Westwood",email = "daniel.westwood@stfc.ac.uk"}
]
license = {text = "BSD 3"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "xarray (>=2024,<2025)",
    "numpy (<=2.0.2)",
    "dask (>=2024,<2025)",
    "arraypartition (>=1.1.2,<2.0.0)",
    "netCDF4 (<=1.6.5)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^7"
poetry = "^2"
sphinx = "^7.1.2"

[tool.poetry.plugins."xarray.backends"]
CFA = "cfapyx.backend:CFANetCDFBackendEntrypoint"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
