[project]
name = "cfapyx"
version = "2025.12.3"
description = "The pure-Python implementation of the CF Aggregation conventions, including the Xarray engine to enable reading CFA-netCDF files."
authors = [
    {name = "Daniel Westwood",email = "daniel.westwood@stfc.ac.uk"}
]
license = {text = "BSD 3"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "xarray (>=2025.11.0, <2026)",
    "numpy (<=3.0.0)",
    "dask (>=2025.11.0, <2026)",
    "arraypartition (>=1.1.3,<2.0.0)",
    "netCDF4 (<=2.0.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^7"
poetry = "^2"
sphinx = "^7.1.2"
sphinx-rtd-theme = "^3.0.2"

[tool.poetry.plugins."xarray.backends"]
CFA = "cfapyx.backend:CFANetCDFBackendEntrypoint"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
